// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile renders Redirects to user's profile when params is not equal to username 1`] = `
<div
  className="user-profile pb-4"
>
  <div
    className="container-fluid user-profile-div"
  >
    <div
      className="row justify-content-start user-info py-4 px-3 px-md-5"
    >
      <ProfilePic
        clearUploadError={[Function]}
        setUploading={[Function]}
        unsetUploading={[Function]}
        updateUserImage={[Function]}
        uploadFailure={[Function]}
        uploadImage={[Function]}
        uploadImageObj={
          Object {
            "error": null,
            "success": false,
            "uploading": false,
          }
        }
        uploadSuccess={[Function]}
        user={
          Object {
            "id": 1,
            "username": "username2",
          }
        }
      />
      <div
        className="col-7 col-md-8 name-div align-self-center"
      >
        <p
          className="name pt-2"
        >
          undefined undefined
        </p>
        <small
          className="text-muted username pt-1"
        >
          @username2
        </small>
        <p
          className="about-me pt-2"
        />
      </div>
    </div>
  </div>
  <div
    className="container-fluid text-center user-profile-recipe-cards-wrapper mb-5 mt-1"
  >
    <AddRecipeBtn
      handleClick={[Function]}
    />
    <div
      className="profile-toggle-wrapper text-center mt-3"
    >
      <a
        className="d-inline recipes-tab text-center active"
        href="#recipes"
      >
        <i
          className="aria-hidden flaticon flaticon-flat-plate-with-hot-food-from-side-view"
        />
        <span
          className="d-none d-sm-inline"
        >
            RECIPES
        </span>
      </a>
      <Link
        className="d-inline recipes-tab text-center"
        href="#favorite-recipes"
        replace={false}
        to="/username2/favorites"
      >
        <FontAwesome
          name="heart"
          size="lg"
          tag="i"
        />
        <span
          className="d-none d-sm-inline"
        >
            FAVORITES
        </span>
      </Link>
    </div>
    <div
      className="row justify-content-center user-profile-recipe-cards px-5 px-sm-5 px-md-0 mt-0"
    >
      <RecipeItems
        handlePageChange={[Function]}
        metadata={
          Object {
            "firstPage": 1,
            "itemsPerPage": 5,
            "lastPage": 3,
            "page": 2,
            "pages": Array [
              1,
              2,
              3,
            ],
            "totalCount": 13,
          }
        }
        recipes={
          Array [
            Object {
              "User": "Me",
              "id": 1,
              "recipeName": "Rice",
            },
            Object {
              "User": "She",
              "id": 5,
              "recipeName": "Beans",
            },
          ]
        }
        title="MY RECIPES"
      />
    </div>
  </div>
</div>
`;

exports[`Profile renders correctly 1`] = `
<div
  className="user-profile pb-4"
>
  <div
    className="container-fluid user-profile-div"
  >
    <div
      className="row justify-content-start user-info py-4 px-3 px-md-5"
    >
      <ProfilePic
        clearUploadError={[Function]}
        setUploading={[Function]}
        unsetUploading={[Function]}
        updateUserImage={[Function]}
        uploadFailure={[Function]}
        uploadImage={[Function]}
        uploadImageObj={
          Object {
            "error": null,
            "success": false,
            "uploading": false,
          }
        }
        uploadSuccess={[Function]}
        user={
          Object {
            "id": 2,
            "username": "username",
          }
        }
      />
      <div
        className="col-7 col-md-8 name-div align-self-center"
      >
        <p
          className="name pt-2"
        >
          undefined undefined
        </p>
        <small
          className="text-muted username pt-1"
        >
          @username
        </small>
        <p
          className="about-me pt-2"
        />
      </div>
    </div>
  </div>
  <div
    className="container-fluid text-center user-profile-recipe-cards-wrapper mb-5 mt-1"
  >
    <AddRecipeBtn
      handleClick={[Function]}
    />
    <div
      className="profile-toggle-wrapper text-center mt-3"
    >
      <a
        className="d-inline recipes-tab text-center active"
        href="#recipes"
      >
        <i
          className="aria-hidden flaticon flaticon-flat-plate-with-hot-food-from-side-view"
        />
        <span
          className="d-none d-sm-inline"
        >
            RECIPES
        </span>
      </a>
      <Link
        className="d-inline recipes-tab text-center"
        href="#favorite-recipes"
        replace={false}
        to="/username/favorites"
      >
        <FontAwesome
          name="heart"
          size="lg"
          tag="i"
        />
        <span
          className="d-none d-sm-inline"
        >
            FAVORITES
        </span>
      </Link>
    </div>
    <div
      className="row justify-content-center user-profile-recipe-cards px-5 px-sm-5 px-md-0 mt-0"
    >
      <RecipeItems
        handlePageChange={[Function]}
        metadata={
          Object {
            "firstPage": 1,
            "itemsPerPage": 5,
            "lastPage": 3,
            "page": 2,
            "pages": Array [
              1,
              2,
              3,
            ],
            "totalCount": 13,
          }
        }
        recipes={
          Array [
            Object {
              "User": "Me",
              "id": 1,
              "recipeName": "Rice",
            },
            Object {
              "User": "She",
              "id": 5,
              "recipeName": "Beans",
            },
          ]
        }
        title="MY RECIPES"
      />
    </div>
  </div>
</div>
`;
